--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section id="proyectos">
       <h2 class="title-proyectos">Proyectos 👩🏻‍💻</h2>
       <div class="contenido-proyectos">
-        <video src="videos/ProyectoMI.mov" class="video" controls></video>
+        <iframe width="560" height="315" src="https://youtu.be/zjkFbFE-kKA" frameborder="0" allowfullscreen class="video"></iframe>
         <div class="descrip-proyectoMI">
           <h1 class="titulo-proyMI">Proyecto Cierre Materia Integradora</h1>
           <h3 class="descripcionMI">
