--- a/index.html
+++ b/index.html
@@ -1,156 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="stylesheets/styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="curriculum, gabsjimz, portfolio" />
-    <meta name="author" content="Gabriela Jiménez" />
-    <meta
-      name="description"
-      content="CV web de Gabriela de Fatima Jiménez Jiménez. Actualmente se encuentra en proceso de construcción."
-    />
-    <title>Gabs CV</title>
-  </head>
-  <body>
-    <header>
-      <nav class="menu">
-        <ul class="items-menu">
-          <li><a href="#sobreMi">Sobre mi</a></li>
-          <li><a href="#estudios">Estudios</a></li>
-          <li><a href="#habilidades">Habilidades</a></li>
-          <li><a href="#proyectos">Proyectos</a></li>
-          <li><a href="#contacto">Contacto</a></li>
-        </ul>
-      </nav>
-      <div class="cover">
-        <div class="imgs-portada">
-          <img src="images/Imagen 1.jpg" alt="Imagen 1" />
-          <img src="images/Imagen 2.jpg" alt="Imagen 2" />
-          <img src="images/Imagen 3.jpg" alt="Imagen 3" />
-          <img src="images/Imagen 4.jpg" alt="Imagen 4" />
-        </div>
-        <div class="text-portada">
-          <h1>Gabriela Jiménez</h1>
-          <h2>- Portafolio -</h2>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="stylesheets/styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords" content="curriculum, gabsjimz, portfolio" />
+  <meta name="author" content="Gabriela Jiménez" />
+  <meta name="description"
+    content="CV web de Gabriela de Fatima Jiménez Jiménez. Actualmente se encuentra en proceso de construcción." />
+  <title>Gabs CV</title>
+</head>
+
+<body>
+  <header>
+    <nav class="menu">
+      <ul class="items-menu">
+        <li><a href="#sobreMi">Sobre mi</a></li>
+        <li><a href="#estudios">Estudios</a></li>
+        <li><a href="#habilidades">Habilidades</a></li>
+        <li><a href="#proyectos">Proyectos</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
+    </nav>
+    <div class="cover">
+      <div class="imgs-portada">
+        <img src="images/Imagen 1.jpg" alt="Imagen 1" />
+        <img src="images/Imagen 2.jpg" alt="Imagen 2" />
+        <img src="images/Imagen 3.jpg" alt="Imagen 3" />
+        <img src="images/Imagen 4.jpg" alt="Imagen 4" />
       </div>
-    </header>
-    <section id="sobreMi">
-      <h2 class="title-sobreMi">Sobre mi 🐢</h2>
-      <div class="contenido-sobreMi">
-        <img src="images/Yo.jpg" alt="Yo en imagen" />
-        <h3 class="texto-sobreMi">
-          Soy estudiante de computación en la ESPOL y actualmente me desempeño
-          como ayudante en las materias de Interacción Humano-Computador y
-          Gestión de FIEC. Poseo habilidades en Python, SQL y Java, y estoy en
-          proceso de aprender JavaScript, CSS y HTML, con un enfoque en
-          experiencia de usuario y diseño de interfaces accesibles. Me apasiona
-          mi carrera y las oportunidades que ofrece, disfrutando de la
-          combinación de programación y diseño. Mi objetivo profesional es
-          establecer una empresa dedicada al diseño de aplicativos amigables
-          para el usuario y trabajar remotamente para una empresa global.
-          Destaco por ser colaborativa, innovadora y creativa, y valoro el
-          trabajo en equipo, la creatividad, el compromiso y la organización. En
-          mi tiempo libre, disfruto de armar rompecabezas, jugar baloncesto y
-          soy amante del fútbol.
+      <div class="text-portada">
+        <h1>Gabriela Jiménez</h1>
+        <h2>- Portafolio -</h2>
+      </div>
+    </div>
+  </header>
+  <section id="sobreMi">
+    <h2 class="title-sobreMi">Sobre mi 🐢</h2>
+    <div class="contenido-sobreMi">
+      <img src="images/Yo.jpg" alt="Yo en imagen" />
+      <h3 class="texto-sobreMi">
+        Soy estudiante de computación en la ESPOL y actualmente me desempeño
+        como ayudante en las materias de Interacción Humano-Computador y
+        Gestión de FIEC. Poseo habilidades en Python, SQL y Java, y estoy en
+        proceso de aprender JavaScript, CSS y HTML, con un enfoque en
+        experiencia de usuario y diseño de interfaces accesibles. Me apasiona
+        mi carrera y las oportunidades que ofrece, disfrutando de la
+        combinación de programación y diseño. Mi objetivo profesional es
+        establecer una empresa dedicada al diseño de aplicativos amigables
+        para el usuario y trabajar remotamente para una empresa global.
+        Destaco por ser colaborativa, innovadora y creativa, y valoro el
+        trabajo en equipo, la creatividad, el compromiso y la organización. En
+        mi tiempo libre, disfruto de armar rompecabezas, jugar baloncesto y
+        soy amante del fútbol.
+      </h3>
+    </div>
+  </section>
+  <div class="gridDe2">
+    <section id="estudios">
+      <h3 class="title-estudios">Estudios 📚</h3>
+      <section class="data-estudios">
+        <h4 class="anios-estudios">2009 - 2022</h4>
+        <h6 class="lugares-estudios">
+          Unidad Educativa Particular Bilingüe Santo Domingo de Guzmán
+        </h6>
+        <h4 class="anios-estudios">2022</h4>
+        <h6 class="lugares-estudios">
+          Escuela Superior Politécnica del Litoral
+        </h6>
+      </section>
+      <div class="logos-estudios">
+        <img src="images/SDG.jpg" alt="Logo SDG" />
+        <img src="images/ESPOL.jpg" alt="Logo ESPOL" />
+      </div>
+    </section>
+    <section id="habilidades">
+      <h3 class="title-habilidades">Habilidades 🧩</h3>
+      <section class="data-habilidades">
+        <h4 class="title-habilidad">Programación</h4>
+        <h6 class="habilidad">Python, SQL, Java</h6>
+        <h4 class="title-habilidad">Diseño de Interfaces</h4>
+        <h6 class="habilidad">Figma</h6>
+      </section>
+      <div class="logos-habilidades">
+        <img src="images/java.png" alt="Logo Java" />
+        <img src="images/python.png" alt="Logo Python" />
+        <img src="images/SQL.png" alt="Logo SQL" />
+      </div>
+    </section>
+  </div>
+  <section id="proyectos">
+    <h2 class="title-proyectos">Proyectos 👩🏻‍💻</h2>
+    <div class="contenido-proyectos">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/zjkFbFE-kKA?si=bpQAkRz_m3xxcqPK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <div class="descrip-proyectoMI">
+        <h1 class="titulo-proyMI">Proyecto Cierre Materia Integradora</h1>
+        <h3 class="descripcionMI">
+          El proyecto consistió en desarrollar una solución mediante una
+          interfaz optimizada para mejorar el proceso de cierre de la materia
+          integradora. Como parte del trabajo, diseñé un prototipo de alta
+          fidelidad en Figma, que ilustra detalladamente el flujo y la gestión
+          del proceso, permitiendo visualizar una experiencia de usuario más
+          eficiente y organizada.
         </h3>
       </div>
-    </section>
-    <div class="gridDe2">
-      <section id="estudios">
-        <h3 class="title-estudios">Estudios 📚</h3>
-        <section class="data-estudios">
-          <h4 class="anios-estudios">2009 - 2022</h4>
-          <h6 class="lugares-estudios">
-            Unidad Educativa Particular Bilingüe Santo Domingo de Guzmán
-          </h6>
-          <h4 class="anios-estudios">2022</h4>
-          <h6 class="lugares-estudios">
-            Escuela Superior Politécnica del Litoral
-          </h6>
-        </section>
-        <div class="logos-estudios">
-          <img src="images/SDG.jpg" alt="Logo SDG" />
-          <img src="images/ESPOL.jpg" alt="Logo ESPOL" />
-        </div>
-      </section>
-      <section id="habilidades">
-        <h3 class="title-habilidades">Habilidades 🧩</h3>
-        <section class="data-habilidades">
-          <h4 class="title-habilidad">Programación</h4>
-          <h6 class="habilidad">Python, SQL, Java</h6>
-          <h4 class="title-habilidad">Diseño de Interfaces</h4>
-          <h6 class="habilidad">Figma</h6>
-        </section>
-        <div class="logos-habilidades">
-          <img src="images/java.png" alt="Logo Java" />
-          <img src="images/python.png" alt="Logo Python" />
-          <img src="images/SQL.png" alt="Logo SQL" />
-        </div>
-      </section>
     </div>
-    <section id="proyectos">
-      <h2 class="title-proyectos">Proyectos 👩🏻‍💻</h2>
-      <div class="contenido-proyectos">
-        <iframe width="560" height="315" src="https://youtu.be/zjkFbFE-kKA" frameborder="0" allowfullscreen class="video"></iframe>
-        <div class="descrip-proyectoMI">
-          <h1 class="titulo-proyMI">Proyecto Cierre Materia Integradora</h1>
-          <h3 class="descripcionMI">
-            El proyecto consistió en desarrollar una solución mediante una
-            interfaz optimizada para mejorar el proceso de cierre de la materia
-            integradora. Como parte del trabajo, diseñé un prototipo de alta
-            fidelidad en Figma, que ilustra detalladamente el flujo y la gestión
-            del proceso, permitiendo visualizar una experiencia de usuario más
-            eficiente y organizada.
-          </h3>
+  </section>
+  <section id="contacto">
+    <h2 class="title-contacto">Contacto 📱</h2>
+    <div class="grid-formulario">
+      <form method="post" class="formulario">
+        <div class="grid-datos">
+          <label for="nombre" class="etiquetas">Nombre:</label>
+          <input type="text" id="nombre" name="nombre" required placeholder="Tu nombre" />
+
+          <label for="email" class="etiquetas">Correo Electrónico:</label>
+          <input type="email" id="email" name="email" required placeholder="tucorreo@ejemplo.com" />
+
+          <label for="asunto" class="etiquetas">Asunto:</label>
+          <input type="text" id="asunto" name="asunto" placeholder="Asunto de tu mensaje" />
+
+          <label for="mensaje" class="etiquetas">Mensaje:</label>
+          <textarea id="mensaje" name="mensaje" rows="5" required placeholder="Escribe tu mensaje aquí"></textarea>
+          <button type="submit">Enviar</button>
         </div>
-      </div>
-    </section>
-    <section id="contacto">
-      <h2 class="title-contacto">Contacto 📱</h2>
-      <div class="grid-formulario">
-        <form method="post" class="formulario">
-          <div class="grid-datos">
-            <label for="nombre" class="etiquetas">Nombre:</label>
-            <input
-              type="text"
-              id="nombre"
-              name="nombre"
-              required
-              placeholder="Tu nombre"
-            />
+      </form>
+    </div>
+  </section>
+  <footer class="firma">® Gabsjimz Designs</footer>
+</body>
 
-            <label for="email" class="etiquetas">Correo Electrónico:</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              required
-              placeholder="tucorreo@ejemplo.com"
-            />
-
-            <label for="asunto" class="etiquetas">Asunto:</label>
-            <input
-              type="text"
-              id="asunto"
-              name="asunto"
-              placeholder="Asunto de tu mensaje"
-            />
-
-            <label for="mensaje" class="etiquetas">Mensaje:</label>
-            <textarea
-              id="mensaje"
-              name="mensaje"
-              rows="5"
-              required
-              placeholder="Escribe tu mensaje aquí"
-            ></textarea>
-            <button type="submit">Enviar</button>
-          </div>
-        </form>
-      </div>
-    </section>
-    <footer class="firma">® Gabsjimz Designs</footer>
-  </body>
 </html>
